fixes for grid, new container-fluid classes, button-group fixes

--- a/src/styles/base/horizontal-rule.less
+++ b/src/styles/base/horizontal-rule.less
@@ -6,7 +6,7 @@
     hr,
     .hr {
         border: 0;
-        border-top: @hr-boder-width solid @hr-border-color;
+        border-top: @hr-border-width solid @hr-border-color;
         clear: both;
         height: 0;
         margin: @spacing-base auto;
