disable hamburger-menu as default

--- a/src/styles/objects/nav-responsive.less
+++ b/src/styles/objects/nav-responsive.less
@@ -38,7 +38,7 @@
 
     // Nav-toggle
     .nav__toggler {
-        .hamburger(); // Add hamburger-menu for nav-toggle
+        //.hamburger(); // Add hamburger-menu for nav-toggle
     }
 }
 
