--- a/src/styles/objects/grid.less
+++ b/src/styles/objects/grid.less
@@ -110,7 +110,7 @@
 
     // Grid modifiers
 
-    .use-row-modifiers(@boolean) when (@boolean =true) {
+    .use-grid-modifiers(@boolean) when (@boolean =true) {
 
         // Grid with half gutters
         .grid--half {
@@ -175,7 +175,7 @@
             }
         }
     }
-    .use-row-modifiers(@use-row-modifiers);
+    .use-grid-modifiers(@use-grid-modifiers);
 }
 
 .use-grid-classes(@use-grid-classes);
