change a:hover and focus

--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -9,8 +9,8 @@
         color: inherit;
         cursor: pointer;
         transition: background-color @transition-duration-default @transition-easing-default, color @transition-duration-default @transition-easing-default, opacity @transition-duration-default @transition-easing-default, border-color @transition-duration-default @transition-easing-default;
-        &:active,
-        &:hover {
+        &:hover,
+        &:focus {
             color: @base-link-color;
         }
     }
