fields shown sm-up

--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -351,7 +351,7 @@
 
         .field-group {
             margin-bottom: @spacing-base;
-            //@media @md-up {//
+            @media @sm-up {
                 display: flex;
                 align-items: center;
                 flex-direction: row;
@@ -368,7 +368,7 @@
                 .field {
                     margin-bottom: 0 !important; // reset margins
                 }
-            //}//
+            }
 
             &:last-child,
             &:last-child .field:last-child {
