--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -18,7 +18,7 @@
 
 // Breakpoints & container widths
 @breakpoint-xs:                 0;
-@breakpoint-sm:                 480px; //30em;
+@breakpoint-sm:                 544px; //34em;
 @breakpoint-md:                 768px; //48em;
 @breakpoint-lg:                 992px; //62em;
 @breakpoint-xl:                 1280px; //80em;
@@ -314,7 +314,7 @@
 @tooltip-vertical-padding:      @spacing-third;
 @tooltip-horizontal-padding:    @spacing-half;
 @tooltip-multiline-width:       160px;
-@tooltip-box-shadow:            @box-shadow-default;
+@tooltip-box-shadow:            none;
 @tooltip-offset:                2px;
 @tooltip-anim-duration:         @transition-duration-default;
 @tooltip-anim-delay:            50ms;
@@ -394,6 +394,7 @@
 @use-print:                     true;
 
 // Screen sizes
+@use-screen-xs:                 true;
 @use-screen-sm:                 true;
 @use-screen-md:                 true;
 @use-screen-lg:                 true;
