variables for links and display font sizes

--- a/src/styles/base/resets.less
+++ b/src/styles/base/resets.less
@@ -136,9 +136,8 @@
         text-rendering: optimizeLegibility;
     }
 
-    // Specify the text decoration of anchors and improve readability of focused elements when they are also in an active/hover state.
+    // Improve readability of focused elements when they are also in an active/hover state.
     a {
-        text-decoration: none;
         &:active,
         &:hover {
             outline: 0;
