fix fields for ie10

--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -399,7 +399,7 @@
                 }
                 input,
                 select {
-                    //width: auto;
+                    width: auto; // fix IE10
                 }
             }
         }
