--- a/src/styles/base/forms.less
+++ b/src/styles/base/forms.less
@@ -40,6 +40,10 @@
         width: 100%; // Let's make 'em responsive!
     }
 
+    textarea {
+        resize: vertical;
+    }
+
     input[type="checkbox"],
     input[type="radio"] {
         + label {
