--- a/src/styles/base/tables.less
+++ b/src/styles/base/tables.less
@@ -4,10 +4,12 @@
 .tables(@boolean) when (@boolean = true) {
 
     table {
-        width: 100%;
+        border-collapse: collapse;
+        border-spacing: 0;
         empty-cells: show;
         word-wrap: break-word; // for CSS3 browsers
         text-align: left;
+        width: 100%;
     }
 
 }
