fix tooltip text-decoration and white-space

--- a/src/styles/objects/tooltips.less
+++ b/src/styles/objects/tooltips.less
@@ -49,10 +49,11 @@
             letter-spacing: @tooltip-letter-spacing;
             text-align: center;
             text-transform: none;
+            text-decoration: none;
             text-overflow: ellipsis;
             padding: @tooltip-vertical-padding @tooltip-horizontal-padding;
-            //word-wrap: break-word;
-            //white-space: nowrap;
+            white-space: nowrap;
+            word-wrap: break-word;
         }
         &:hover,
         &:focus &:active,
