--- a/src/styles/objects/loader.less
+++ b/src/styles/objects/loader.less
@@ -7,6 +7,7 @@
     .loader,
     .is-loading {
         min-height: @loader-size;
+        width: inherit;
         position: relative;
         pointer-events: none;
         color: transparent !important; // Hide text
@@ -14,7 +15,7 @@
             border: @loader-thickness solid @loader-color;
             border-right-color: transparent;
             border-top-color: transparent;
-            border-radius: .8rem;
+            border-radius: 100%;
             content: "";
             position: absolute;
             left: 50%;
@@ -28,6 +29,17 @@
             animation: spinner @loader-speed infinite linear;
         }
     }
+
+    .loader--large {
+        min-height: @loader-size * 2;
+        &::after {
+            margin-left: -(@loader-size);
+            margin-top: -(@loader-size);
+            height: @loader-size * 2;
+            width: @loader-size * 2;
+        }
+    }
+
     @keyframes spinner {
         0% {
             transform: rotate(0deg);
